using UnityEngine;

/// <summary>
/// On répertorie tout les strings pour les animations
/// </summary>
internal class AnimationStrings
{
    internal static string isMoving = "isMoving";
    internal static string attackTrigger = "attack";
    internal static string spellCastTrigger = "spellCast";
    internal static string hitTrigger = "hit";
    internal static string isDead = "isDead";
    internal static string blockTrigger = "block";
}
